<resources>
    <string name="entry_title">AI Agent Call</string>
    <string name="room_entrance_text">Start Experience</string>
    <string name="custom_agent_room_entrance_text">Scan To Experience</string>
    <string name="in_call_text">AI Audio Call</string>
    <string name="pause_call">Pause Call</string>
    <string name="resume_call">Resume Call</string>
    <string name="mute_call">Mute</string>
    <string name="unmute_call">Unmute</string>
    <string name="stop_call">Hang Up</string>
    <string name="speaker_on">Speaker On</string>
    <string name="speaker_off">Speaker Off</string>
    <string name="camera_on">Camera On</string>
    <string name="camera_off">Camera Off</string>
    <string name="call_connection_tips">Connecting...</string>
    <string name="call_error_default">An error occurred during the current call</string>
    <string name="call_error_start_failed">Unable to start the call, service has an issue</string>
    <string name="call_error_token_expired">Call failed, authorization has expired</string>
    <string name="call_error_connection_failed">Call failed, there is a network connection issue</string>
    <string name="call_error_kicked_by_user_replace">Call failed, the user might be using another device</string>
    <string name="call_error_kicked_by_system">Call failed, ended by the system</string>
    <string name="call_error_local_device_exception">Call failed, a local device error occurred</string>
    <string name="call_error_agent_subscription_required">Call Failed, Subscription Required</string>
    <string name="call_error_agent_not_found">Call Failed, agent not found</string>
    <string name="call_error_engine_is_destroying">Call failed, engine is destroying, please try again later</string>
    <string name="user_mute_tips">You are muted</string>
    <string name="robot_pause_tips">Call paused, tap to start</string>
    <string name="robot_waiting_tips">Please start speaking</string>
    <string name="robot_listening_tips">I\'m listening to you</string>
    <string name="robot_thinking_tips">Thinking...</string>
    <string name="robot_thinking_finish_tips">Thinking finish</string>
    <string name="robot_thinking_stop_tips">Thinking stop</string>
    <string name="robot_speaking_tips">I am replying. You can interrupt me by tapping the screen or speaking</string>
    <string name="robot_speaking_tips_without_voice_interrupt">I\'m replying, you can tap the screen to interrupt me</string>
    <string name="btn_text_ai_call_full_screen_subtitle">Subtitles</string>
    <string name="setting_title">Settings</string>
    <string name="config_interrupt_title">Smart Interrupt</string>
    <string name="config_interrupt_tips">Intelligently interrupt the AI robot based on sound and environment</string>
    <string name="config_interrupt_title_open_toast">Intelligent interrupt turned on</string>
    <string name="config_interrupt_title_close_toast">Intelligent interrupt turned off</string>
    <string name="config_audio_tone_title">Choose Tone</string>
    <string name="config_audio_tone_tips">After switching tones, the AI will use the new voice in the next response</string>
    <string name="layout_base_loading">Loading...</string>
    <string name="layout_base_load_end">- Load Complete -</string>
    <string name="layout_base_load_failed">- Load Failed -</string>
    <string name="layout_base_load_complete">Tap me, more surprises below 👇</string>
    <string name="audio_tone_selector">Use</string>
    <string name="permission_tips">Please enable permissions and try again</string>
    <string name="tips_exit">Press again to hang up</string>
    <string name="tips_notice_before_connected">Please try after the connection is established</string>
    <string name="dialog_robot_title">Settings</string>
    <string name="dialog_robot_id_tips">Set the robot ID. If left blank, the default robot will be used.</string>
    <string name="dialog_robot_confirm">Confirm</string>
    <string name="dialog_robot_cancel">Cancel</string>
    <string name="foreground_service_tips">AI call in progress...</string>
    <string name="debug_mode_enable">Debug Mode Enable</string>
    <string name="debug_mode_disable">Debug Mode Disable</string>
    <string name="official_agent">Official Agent</string>
    <string name="custom_agent">Custom Agent</string>
    <string name="ai_audio_call">AI Voice Call</string>
    <string name="digital_human_call">AI Avatar Call</string>
    <string name="vision_agent_call">AI Vision Call</string>
    <string name="chat_bot">AI Chat</string>
    <string name="video_agent_call">AI Video Call</string>
    <string name="phone_agent_call">AI Outbound Calls</string>
    <string name="phone_agent_in_call">AI Inbound Calls</string>
    <string name="description_human_call">The Digital Human Lab is a cutting-edge, AI-driven platform developed by Alibaba Cloud, offering users comprehensive intelligent customer service solutions.</string>
    <string name="description_custom_agent">Please go to the console and scan the QR code to obtain a temporary trial token.</string>
    <string name="description_voice_call">Users interact and converse with the intelligent assistant through voice.</string>
    <string name="description_avatar_call">Interact with digital humans via video to enhance the authenticity of user experience.</string>
    <string name="description_vision_call">Through video interaction, the agent provides feedback by combining voice and visual input.</string>
    <string name="description_video_call">Digital humans conduct two-way video calls with users, incorporating visual understanding.</string>
    <string name="description_chatbot">Communicate directly with the agent via voice or text in a chat dialogue format.</string>
    <string name="description_pstn_in_bound">Users initiate inbound calls to the intelligent agent.</string>
    <string name="description_pstn_out_bound">The intelligent agent makes outbound calls directly to users mobile numbers via telecom carrier networks.</string>
    <string name="temporary_experience_token">Entrusting authorized AI agents</string>
    <string name="et_token_hints">Please scan the QR code to obtain authorized AI agents</string>
    <string name="token_expired_tips">AI agent authorization has expired</string>
    <string name="token_resource_exhausted">Avatar Agent are popular, please try later or enjoy the new experience of Voice Agent first</string>
    <string name="token_time_lit_tips">The call has ended. The avatar or video agent call can only be experienced for 5 minutes</string>
    <string name="error_tips_avatar_leave_join">Call failed, the avatar agent stopped the call</string>
    <string name="error_tips_avatar_subscribe_fail">Call failed, avatar agent failed to pull audio stream</string>
    <string name="error_tips_asr_unavailable">Third party ASR service unavailable</string>
    <string name="error_tips_avatar_agent_unavailable">Avatar Agent service unavailable</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="call_delay">Call Delay</string>
    <string name="ambient_noise_handling">Ambient Noise Handling</string>
    <string name="voice_recognition_accuracy">Voice Recognition Accuracy</string>
    <string name="interaction_experience">Interaction Experience</string>
    <string name="voice_quality_realism">Voice Quality Realism</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="complete_rating_tips">Please complete all ratings first</string>
    <string name="tips_authorization_invalidate">Authentication information is missing, please log in and try again!</string>
    <string name="reporting_title">Report issues</string>
    <string name="reporting_type">Issue Type</string>
    <string name="reporting_type_tips">(Multiple choices)</string>
    <string name="reporting_type_function_unavailable">Function unavailable</string>
    <string name="reporting_type_function_bugs">Available but has bugs</string>
    <string name="reporting_type_response_slow">AI response is too slow</string>
    <string name="reporting_type_response_inaccurate">AI response content is inaccurate</string>
    <string name="reporting_type_media_quality">Audio/Video quality issues</string>
    <string name="reporting_type_others">Other issues</string>
    <string name="reporting_desc_hint">Please describe any other issues you encountered</string>
    <string name="reporting_request_id_copy">Request ID copied</string>
    <string name="reporting_id_display">Request ID: %s</string>
    <string name="copy">Copy</string>
    <string name="submitted">Submitted</string>
    <string name="copied">Copied</string>
    <string name="mode_natural_conversation">Natural Conversation Mode</string>
    <string name="mode_push_to_talk">Push To Talk Mode</string>
    <string name="voiceprint_recognition_test_title">Voiceprint Recognition</string>
    <string name="latency_rate_title">Latency Rate</string>
    <string name="btn_text_click_to_view_latency_rate">Click To View ></string>
    <string name="aicall_sentence_latency_title">Sentence Latency</string>
    <string name="aicall_sentence_latency_introduction">The latency in an AI conversation turn, measured from the moment the user finishes their last word to when the AI agent begins its first response. Note: There is a statistical failure rate for conversation latency measurements. When unavoidable dirty data occurs, the system will automatically discard the conversation latency data.</string>
    <string name="aicall_sentence_latency_sentence_id">Sentence ID</string>
    <string name="voiceprint_recognition_test_desc">AI only uses your voice as input, even if multiple people are speaking at the same time</string>
    <string name="voiceprint_recognized">Voiceprint Recognized</string>
    <string name="delete_voiceprint">Delete Voiceprint</string>
    <string name="voiceprint_enable">Voiceprint recognition enabled</string>
    <string name="voiceprint_disable">Voiceprint recognition disabled</string>
    <string name="main_speaker_not_recognized">(voiceprint) No response without regular speaker recognized</string>
    <string name="aival_main_speaker_not_recognized">VAD detected other speaking, stop responded this question.</string>
    <string name="reset_voiceprint">Reset</string>
    <string name="voiceprint_info_tipe">Voiceprint feature information</string>
    <string name="voiceprint_info_tipe_cannot_use">Voiceprint feature information (Not recorded)</string>
    <string name="voiceprint_info_record">Record</string>
    <string name="voiceprint_info_tipe_desc">Please read the following passage aloud in a quiet environment</string>
    <string name="voiceprint_read_tips">"Wow, I think the skirt you are wearing today is very bright and elegant, which sets off your temperament very well. It is really beautiful. Can you tell me which store you bought such a beautiful skirt from? I want to buy one too."</string>
    <string name="voiceprint_push_to_record">Press to start recording, release to end</string>
    <string name="voiceprint_push_to_recognizing">Voiceprint information is being input, please wait...</string>
    <string name="voiceprint_put_failed">Voiceprint recording failed, please record again</string>
    <string name="voiceprint_put_success">Voiceprint recording success</string>
    <string name="voiceprint_info_title">Voiceprint feature information (already recorded)</string>
    <string name="voiceprint_rerecord">Re-record</string>
    <string name="voiceprint_already_record">Already record</string>
    <string name="chat_bot_delete_message_title">Confirm to delete message?</string>
    <string name="chat_bot_delete_message_content">Once message is deleted, it cannot be restored</string>
</resources>