<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_base_background"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="46dp">
        <TextView
            android:id="@+id/tv_skip"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/layout_base_text_style_14"
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/layout_base_text_style_16"
        android:text="@string/overall_rating"
        android:layout_marginTop="9dp"
        android:layout_gravity="center"
        />

    <include
        layout="@layout/sub_layout_score_big"
        android:id="@+id/ll_sum_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layer_score_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/layout_dialog_score_bg"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        >

        <TextView
            android:id="@+id/tv_score_call_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/layout_base_text_style_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_score_call_delay"
            android:text="@string/call_delay"/>
        <include
            android:id="@+id/ll_score_call_delay"
            layout="@layout/sub_layout_score_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_score_noise_handling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/layout_base_text_style_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_score_noise_handling"
            android:text="@string/ambient_noise_handling"/>
        <include
            layout="@layout/sub_layout_score_small"
            android:id="@+id/ll_score_noise_handling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_score_call_delay"
            />

        <TextView
            android:id="@+id/tv_score_voice_recognition_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/layout_base_text_style_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_score_voice_recognition_accuracy"
            android:text="@string/voice_recognition_accuracy"/>
        <include
            layout="@layout/sub_layout_score_small"
            android:id="@+id/ll_score_voice_recognition_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_score_noise_handling"
            />

        <TextView
            android:id="@+id/tv_score_interaction_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/layout_base_text_style_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_score_interaction_experience"
            android:text="@string/interaction_experience"/>
        <include
            layout="@layout/sub_layout_score_small"
            android:id="@+id/ll_score_interaction_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_score_voice_recognition_accuracy"
            />

        <TextView
            android:id="@+id/tv_score_voice_quality_realism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/layout_base_text_style_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_score_voice_quality_realism"
            android:text="@string/voice_quality_realism"/>
        <include
            layout="@layout/sub_layout_score_small"
            android:id="@+id/ll_score_voice_quality_realism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_score_interaction_experience"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_entrance_selector"
        android:paddingHorizontal="90dp"
        android:paddingVertical="10dp"
        android:text="@string/submit"
        android:textColor="@color/font_color_entrance"
        android:layout_gravity="center"
        android:layout_marginBottom="90dp"
        />

</LinearLayout>