<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="44dp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_aicall_in_call_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_reporting_title"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/text_style_16"
            android:text="@string/reporting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_aicall_close"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_16"
            android:text="Request ID"
            android:layout_gravity="start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_rounded_rectangle_small"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_reporting_request_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:hint="请输入ID"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text_tertiary"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:background="@android:color/transparent"/>
            <ImageView
                android:id="@+id/iv_reporting_request_id_copy"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_chatbot_message_copy"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_16"
            android:text="@string/reporting_type"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layer_reporting_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp" >

        <TextView
            android:id="@+id/tv_reporting_type_lag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_secondary_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/reporting_type_function_unavailable"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:background="@drawable/bg_reporting_type_selector"/>

        <TextView
            android:id="@+id/tv_reporting_type_function_unavailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_secondary_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/reporting_type_function_unavailable"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:background="@drawable/bg_reporting_type_selector"/>

        <TextView
            android:id="@+id/tv_reporting_type_function_bugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_secondary_14"
            app:layout_constraintLeft_toRightOf="@id/tv_reporting_type_function_unavailable"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/reporting_type_function_bugs"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:background="@drawable/bg_reporting_type_selector"/>

        <TextView
            android:id="@+id/tv_reporting_type_response_slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_secondary_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reporting_type_function_unavailable"
            android:text="@string/reporting_type_response_slow"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:background="@drawable/bg_reporting_type_selector"/>

        <TextView
            android:id="@+id/tv_reporting_type_response_inaccurate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_secondary_14"
            app:layout_constraintLeft_toRightOf="@id/tv_reporting_type_response_slow"
            app:layout_constraintTop_toBottomOf="@id/tv_reporting_type_function_unavailable"
            android:text="@string/reporting_type_response_inaccurate"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:background="@drawable/bg_reporting_type_selector"/>

        <TextView
            android:id="@+id/tv_reporting_type_media_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_secondary_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reporting_type_response_slow"
            android:text="@string/reporting_type_media_quality"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:background="@drawable/bg_reporting_type_selector"/>

        <TextView
            android:id="@+id/tv_reporting_type_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_secondary_14"
            app:layout_constraintLeft_toRightOf="@id/tv_reporting_type_media_quality"
            app:layout_constraintTop_toBottomOf="@id/tv_reporting_type_response_slow"
            android:text="@string/reporting_type_others"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:background="@drawable/bg_reporting_type_selector"/>

        <EditText
            android:id="@+id/et_reporting_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reporting_type_others"
            android:minLines="4"
            android:maxLines="8"
            style="@style/layout_base_text_style_14"
            android:text=""
            android:hint="@string/reporting_desc_hint"
            android:textColorHint="@color/color_text_tertiary"
            android:background="@color/color_fill_secondary"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:gravity="top|start"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_reporting_desc_counting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_tertiary_14"
            app:layout_constraintEnd_toEndOf="@id/et_reporting_desc"
            app:layout_constraintBottom_toBottomOf="@+id/et_reporting_desc"
            android:text="0/100"
            android:paddingVertical="6dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_entrance_selector"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/submit"
        android:textColor="@color/color_text_disabled"
        android:layout_marginBottom="90dp"
        android:gravity="center"
        />

</LinearLayout>